--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,8 @@
  *************************************************************************/
 
 #me {
-  width: 300px;
-  border-radius: 90%;
+  width: 500px;
+  /* border-radius: 90%; */
 }
 
 .flex-item-stretch-6 {
